# mac_vga_driver

./: .gitignore  CMakeLists.txt  Makefile  Untitled  asteroids.c  bad_apple.s  celeste_train  common.c  common.h  deltarune.c  donkey_kong.c  flappy_bird.c  frogger.c  invaders.c  main.c  mario_movie.s  mario_nes.c  metroid.c  minecraft.c  pacman.c  pixel_art.c  quotes.c  revolution.c  sanic.c  snake.c  splash.c  tetris.c  transcoder.py  tron.c  undertale.c  video.c
.agents/: AGENTS.md
emulator/: Makefile  sdl_emulator.c
emulator/stubs/: vga.pio.h
emulator/stubs/hardware/: clocks.h  dma.h  irq.h  pio.h
emulator/stubs/pico/: stdlib.h
firmware/core/: common.c  common.h  main.c
firmware/hardware/: bad_apple.s  vga.pio
firmware/scenes/games/: asteroids.c  bouncing_box.c  breakout.c  celeste.c  celeste_ai_weights.h  celeste_classic.c  celeste_classic.h  chan.c  flappy_bird.c  frogger.c  mario_nes.c  mario_show.c  minecraft.c  pong.c  revolution.c  snake.c  tetris.c  undertale.c
firmware/scenes/visuals/: downloads_slideshow.c  happy.c  perkins.c  pixel_art.c  quotes.c
tests/: Makefile  test.h  test_celeste_classic.c  test_core.c  test_scenes.c  test_stubs.c
tools/: celeste_train.c  dump_perkins.c  generate_downloads_slideshow.py  transcode_bad_apple.py
